--- a/views/coffees/index.ejs
+++ b/views/coffees/index.ejs
@@ -1,18 +1,16 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-<img src="/img/home1.png" alt="DailyDrip Logo" width="1390" height="600">
-<!-- <img src="/img/Cafenod2.JPG" alt="DailyDrip Logo" width="1390" height="600"> -->
-
-
-
-
-
-
-</body>
-</html>
+<div class="container-fluid p-0">
+    <img src="/img/home1.png" alt="DailyDrip Logo" class="img-fluid w-100 hero-image">
+    <!-- <img src="/img/Cafenod2.JPG" alt="DailyDrip Logo" class="img-fluid w-100"> -->
+</div>
+<style>
+    .hero-image {
+        height: 90vh;                /* Full screen height */
+         width: 100%;
+        background-image: url('/img/home1.png');
+        background-size: cover;        /* FULL SCREEN COVER */
+        background-position: center;   /* Center crop */
+        background-repeat: no-repeat;
+        margin-top: 0px;              /* Header ke liye space */
+        margin-bottom: 0px;           /* Footer ke liye space */
+    }
+</style>
