--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,24 +1,29 @@
-<footer class="bg-dark text-light py-4 mt-auto">
+<footer class="bg-dark text-light py-5 mt-auto">
   <div class="container text-center">
 
-    <!-- Social Icons -->
-    <div class="mb-3">
-      <a href="/" class="text-light fs-4 mx-2 text-decoration-none">
+    <!-- Social Icons Layer -->
+    <div class="mb-4">
+      <a href="#" class="text-light fs-4 mx-3 text-decoration-none">
         <i class="fa-brands fa-facebook"></i>
       </a>
-      <a href="/" class="text-light fs-4 mx-2 text-decoration-none">
+      <a href="#" class="text-light fs-4 mx-3 text-decoration-none">
         <i class="fa-brands fa-instagram"></i>
       </a>
-      <a href="/" class="text-light fs-4 mx-2 text-decoration-none">
+      <a href="#" class="text-light fs-4 mx-3 text-decoration-none">
         <i class="fa-brands fa-whatsapp"></i>
       </a>
     </div>
 
-    <!-- Text and Links -->
-    <div>
-      <div class="mb-1">&copy; Caffenity Pvt Ltd</div>
-      <a href="/" class="text-light text-decoration-none">Privacy Terms</a>
-    </div>
+    <!-- Ownership Layer -->
+    <p class="mb-1 text-center">Made & Owned by <strong>Aadarsh Kushwaha</strong></p>
+
+    <!-- Copyright -->
+    <p class="mb-1 text-center">&copy; 2025 Caffenity Pvt. Ltd. | All Rights Reserved.</p>
+
+    <!-- Privacy Layer -->
+    <a href="#" class="text-light text-decoration-none d-block text-center">
+      Privacy Policy · Terms & Conditions
+    </a>
 
   </div>
 </footer>
