home done about not styled

--- a/views/coffees/index.ejs
+++ b/views/coffees/index.ejs
@@ -1,3 +1,6 @@
+<% layout("layouts/boilerplate") %>
+
+
 <div class="container-fluid p-0">
     <img src="/img/home1.png" alt="DailyDrip Logo" class="img-fluid w-100 hero-image">
     <!-- <img src="/img/Cafenod2.JPG" alt="DailyDrip Logo" class="img-fluid w-100"> -->
@@ -14,3 +17,5 @@
         margin-bottom: 0px;           /* Footer ke liye space */
     }
 </style>
+
+
