--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -11,8 +11,8 @@
     <div class="links-container d-flex flex-grow-1 text-decoration-none">
         <!-- Left aligned links -->
         <div class="left-links d-flex text-decoration-none">
-            <a href="#">Home</a>
-            <a href="#">About</a>
+            <a href="/home">Home</a>
+            <a href="/about">About</a>
             <a href="#">Shop</a>
              <a href="#">Pages</a>
             <a href="#">Blog</a>
