--- a/views/layouts/boilerplate.ejs
+++ b/views/layouts/boilerplate.ejs
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>DailyDrip</title>
+  <title>Caffinity</title>
   <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined" />
     <style>
         body {
@@ -59,15 +59,13 @@
     </style>
 
 </head>
-
 <body>
-  <!-- Header -->
-  <%- include("partials/header") %>
+  <%- include("../partials/header") %>
 
-  <!-- Main Coffee Page -->
-  <%- include("coffees/index") %>
+  <main>
+    <%- body %>
+  </main>
 
-  <!-- Footer -->
-  <%- include("partials/footer") %>
+  <%- include("../partials/footer") %>
 </body>
 </html>
