menu page basic

--- a/views/layouts/boilerplate.ejs
+++ b/views/layouts/boilerplate.ejs
@@ -6,7 +6,15 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Caffinity</title>
   <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined" />
+   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
     <style>
+html, body {
+  height: 100%;
+}
+ main {
+      flex: 1; /* main takes all remaining space pushing footer to bottom */
+    }
+
         body {
             margin: 0;
             font-family: Arial, sans-serif;
@@ -59,13 +67,19 @@
     </style>
 
 </head>
-<body>
+
+<body class="d-flex flex-column min-vh-100">
   <%- include("../partials/header") %>
 
-  <main>
-    <%- body %>
+  <main class="flex-grow-1">
+      <%- body %>
   </main>
 
   <%- include("../partials/footer") %>
+
+
+   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js" integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI" crossorigin="anonymous"></script>
 </body>
+
+
 </html>
