--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,20 +1,16 @@
-<footer class="bg-dark text-light py-5 mt-auto">
-  <div class="container text-center">
 
-    <!-- Social Icons Layer -->
-    <div class="mb-4">
-      <a href="#" class="text-light fs-4 mx-3 text-decoration-none">
-        <i class="fa-brands fa-facebook"></i>
-      </a>
-      <a href="#" class="text-light fs-4 mx-3 text-decoration-none">
-        <i class="fa-brands fa-instagram"></i>
-      </a>
-      <a href="#" class="text-light fs-4 mx-3 text-decoration-none">
-        <i class="fa-brands fa-whatsapp"></i>
-      </a>
-    </div>
 
-    <!-- Ownership Layer -->
+<footer>
+     <div class="f-info sticky-bottom mt-auto bg-dark text-light py-3 text-center">
+        
+        <div class="f-info-socials">
+            <a href="/"><i class="fa-brands fa-facebook"></i>  </a>
+            <a href="/"><i class="fa-brands fa-instagram"></i>    </a>
+            <a href="/"><i class="fa-brands fa-whatsapp"></i>    </a>
+        </div>
+
+            <div class="f-info-links">   
+              <!-- Ownership Layer -->
     <p class="mb-1 text-center">Made & Owned by <strong>Aadarsh Kushwaha</strong></p>
 
     <!-- Copyright -->
@@ -23,7 +19,22 @@
     <!-- Privacy Layer -->
     <a href="#" class="text-light text-decoration-none d-block text-center">
       Privacy Policy · Terms & Conditions
-    </a>
+    </a>     
+            </div>
+    
+     </div>
 
-  </div>
 </footer>
+
+<style>
+.f-info{
+  height: 8rem;
+  background: #ebebeb;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: space-evenly;
+  
+}
+
+</style>
