--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -10,14 +10,13 @@
     <!-- Links container with flex -->
     <div class="links-container d-flex flex-grow-1 text-decoration-none">
         <!-- Left aligned links -->
-        <div class="left-links d-flex text-decoration-none">
+        <div class="left-links d-flex text-decoration-none mt-3">
             <a href="/home">Home</a>
-            <a href="/about">About</a>
-            <a href="#">Shop</a>
-             <a href="#">Pages</a>
-            <a href="#">Blog</a>
-            <a href="#">Contact Us</a>
-            <a class="material-symbols-outlined">local_mall</a>
+            <a class="ms-2"href="/about">About</a>
+            <a class="ms-4" href="/menu">Menu</a>
+             <a class="ms-2" href="/pages">Pages</a>
+            <a class="ms-2" href="/pages">Contact Us</a>
+           <a class="ms-auto d-block material-symbols-outlined" href="/cart">local_mall</a>
         </div>
         
 
