--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -14,7 +14,7 @@
     <p class="mb-1 text-center">Made & Owned by <strong>Aadarsh Kushwaha</strong></p>
 
     <!-- Copyright -->
-    <p class="mb-1 text-center">&copy; 2025 Caffenity Pvt. Ltd. | All Rights Reserved.</p>
+    <p class="mb-1 text-center">&copy; 2025 Caffinity Pvt. Ltd. | All Rights Reserved.</p>
 
     <!-- Privacy Layer -->
     <a href="#" class="text-light text-decoration-none d-block text-center">
