--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -1,7 +1,10 @@
 <div class="navbar">
     <!-- Logo left -->
   <div class="logo d-flex align-items-center">
-    <span class="material-symbols-outlined coffee-icon">coffee</span>
+ 
+
+        <span class="material-symbols-outlined coffee-icon">coffee</span>
+    
     <span class="ms-2" style="font-size: 20px; color: white;">Caafinity</span>
 </div>
 
@@ -12,11 +15,11 @@
         <!-- Left aligned links -->
         <div class="left-links d-flex text-decoration-none mt-3">
             <a href="/home">Home</a>
-            <a class="ms-2"href="/about">About</a>
             <a class="ms-4" href="/menu">Menu</a>
+            <a class="ms-2"href="/about">About</a>
              <a class="ms-2" href="/pages">Pages</a>
-            <a class="ms-2" href="/pages">Contact Us</a>
-           <a class="ms-auto d-block material-symbols-outlined" href="/cart">local_mall</a>
+            <a class="ms-2 d-flex" href="/contact">Contact Us</a>
+ 
         </div>
         
 
@@ -25,7 +28,12 @@
 
         <!-- Right aligned links -->
         <div class="right-links d-flex">
-           
+             <a class="me-2 mt-3 "href="/logout">Logout</a>
+          <a class="ms-auto mt-1 d-block material-symbols-outlined" 
+   style="font-size: 40px;" href="/cart">
+   local_mall
+</a>
+
         </div>
     </div>
 </div>
