--- a/views/coffees/index.ejs
+++ b/views/coffees/index.ejs
@@ -1,21 +1,32 @@
 <% layout("layouts/boilerplate") %>
 
+<div class="hero-section"></div>
 
-<div class="container-fluid p-0">
-    <img src="/img/home1.png" alt="DailyDrip Logo" class="img-fluid w-100 hero-image">
-    <!-- <img src="/img/Cafenod2.JPG" alt="DailyDrip Logo" class="img-fluid w-100"> -->
-</div>
 <style>
-    .hero-image {
-        height: 90vh;                /* Full screen height */
-         width: 100%;
-        background-image: url('/img/home1.png');
-        background-size: cover;        /* FULL SCREEN COVER */
-        background-position: center;   /* Center crop */
-        background-repeat: no-repeat;
-        margin-top: 0px;              /* Header ke liye space */
-        margin-bottom: 0px;           /* Footer ke liye space */
+.hero-section {
+    width: 100%;
+    height: 100vh;
+    background-image: url('/img/home1.png');
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+}
+
+/* MOBILE FIX */
+@media (max-width: 576px) {
+    .hero-section {
+        background-size: contain;      /* ⭐ width fix */
+        background-position: top;
+        background-color: #000;        /* background fill */
+        height: 100vh;
     }
+}
+
+
+/* VERY SMALL PHONES FIX */
+@media (max-width: 480px) {
+    .hero-section {
+        background-position: top;
+    }
+}
 </style>
-
-
