--- a/views/coffees/menu.ejs
+++ b/views/coffees/menu.ejs
@@ -1,29 +1,39 @@
 <% layout('layouts/boilerplate') %>
 
-<h1 class="mt-3 font-size: 1.7rem text-warning-emphasis">Explore all the best coffees</h1>
+<style>
+.fixed-img {
+  height: 200px;       /* Image ki fixed height */
+  object-fit: cover;   /* Crop aur uniform look */
+  width: 100%;         /* Full width */
+}
+.card {
+  padding: 0 !important;
+}
 
-<div class="cards d-flex flex-wrap gap-4 mt-4 ms-4 p-4">
 
-  <% for (let coffee of coffees) { %>
+</style>
 
-    <div class="card" style="width: 18rem;">
-      <img src="<%= coffee.image %>" class="card-img-top" alt="<%= coffee.name %>">
+<h1 class="mt-3 font-size: 2.5rem text-warning-emphasis">Explore all the best coffees at Caffinity</h1>
 
-      <div class="card-body">
-        <h5 class="card-title"><%= coffee.name %></h5>
+<div class="cards d-flex flex-wrap gap-4 mt-4 ms-6 ">
 
-        <p class="card-text">
-          <%= coffee.description %>
-        </p>
+ <% for (let coffee of coffees) { %>
 
-        <p class="fw-bold">₹ <%= coffee.price %> &nbsp;⭐ <%= coffee.avgRating %></p>
+  <div class="card h-100 container-fluid border border-secondary" style="width: 20rem; height: 25rem">
+    <img src="<%= coffee.image %>" class="card-img-top fixed-img border-bottom" alt="<%= coffee.name %>">
 
-     
-      <button type="button" class="btn btn-outline-primary">Order</button>
+    <div class="card-body d-flex flex-column">
+      <h5 class="card-title"><%= coffee.name %></h5>
 
-      </div>
+      <p class="card-text"><%= coffee.description %></p>
+
+      <p class="fw-bold">₹ <%= coffee.price %> &nbsp;⭐ <%= coffee.avgRating %></p>
+
+      <input class="btn btn-primary btn-sm mt-auto" type="button" value="Add">
     </div>
+  </div>
 
-  <% } %>
+<% } %>
+
 
 </div>
