--- a/views/layouts/boilerplate.ejs
+++ b/views/layouts/boilerplate.ejs
@@ -30,11 +30,12 @@ html, body {
 
         /* Icon + text container */
         .logo {
-            display: none;
+            display: flex;
             flex-direction: column; /* vertical stack */
             align-items: center;
             margin-right: 30px;
         }
+
 
         .coffee-icon {
             font-variation-settings:
