--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -3,8 +3,8 @@
   <div class="logo d-flex align-items-center">
  
 
-        <span class="material-symbols-outlined coffee-icon">coffee</span>
-    
+        <!-- <span class="material-symbols-outlined coffee-icon">coffee</span> -->
+  <span class="material-symbols-outlined coffee-icon">coffee</span>
     <span class="ms-2" style="font-size: 20px; color: white;">Caafinity</span>
 </div>
 
