login and signup page ui

--- a/views/coffees/about.ejs
+++ b/views/coffees/about.ejs
@@ -37,7 +37,7 @@
       <div class="col-lg-8">
 
         <div class="p-4 p-md-5 bg-white rounded-4 shadow-lg border-0">
-          <p class="mb-0" style="font-size:1.15rem; color:#6B4E36; line-height:1;">
+          <p class="mb-0" style="font-size:1.15rem; color:hsl(28, 33%, 31%); line-height:1;">
             
             Caffinity began in 2023 with a simple idea—crafting a space where everyone can enjoy
             top-notch coffee, warmth, and a boutique café atmosphere without breaking the bank.<br><br>
