--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -27,7 +27,7 @@
 </footer>
 
 <style>
-.f-info{
+/* .f-info{
   height: 8rem;
   background: #ebebeb;
   display: flex;
@@ -35,6 +35,13 @@
   justify-content: center;
   align-items: space-evenly;
   
+} */
+.f-info {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  padding: 15px 0;
 }
 
 </style>
