--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -4,7 +4,7 @@
     <span class="ms-2" style="font-size: 20px; color: white;">Caafinity</span>
   </div>
 
-  <div class="links-container d-flex flex-grow-1">
+  <div class="links-container d-flex flex-grow-1 text-decoration-none">
     <div class="left-links d-flex mt-3">
       <a href="/home">Home</a>
       <a class="ms-4" href="/menu">Menu</a>
