--- a/views/users/login.ejs
+++ b/views/users/login.ejs
@@ -107,12 +107,10 @@
         </form>
 
         <!-- Google Login -->
-        <a href="/auth/google">
-            <button class="google-btn">
-                <img src="/img/google.png" width="22"/>
-                Continue with Google
-            </button>
-        </a>
+         <a href="/auth/google" class="google-btn text-decoration-none">
+    <img src="/img/google.png" />  
+    Sign up with Google
+</a>
 
         <p class="signup-text">
             Don’t have an account? 
