--- a/views/users/signup.ejs
+++ b/views/users/signup.ejs
@@ -21,12 +21,17 @@
         </form>
 
         <!-- Google Signup -->
-        <a href="/auth/google">
-            <button class="google-btn">
+        <!-- <a href="/auth/google">
+            <button class="google-btn text-decoration-none">
                 <img src="/img/google.png" />  
                 Sign up with Google
             </button>
-        </a>
+        </a> -->
+        <a href="/auth/google" class="google-btn text-decoration-none">
+    <img src="/img/google.png" />  
+    Sign up with Google
+</a>
+
 
         <p class="login-text">
             Already have an account?
