user login , signup , logout done

--- a/views/users/login.ejs
+++ b/views/users/login.ejs
@@ -109,7 +109,7 @@
         <!-- Google Login -->
          <a href="/auth/google" class="google-btn text-decoration-none">
     <img src="/img/google.png" />  
-    Sign up with Google
+    Login with Google
 </a>
 
         <p class="signup-text">
