--- a/views/coffees/menu.ejs
+++ b/views/coffees/menu.ejs
@@ -34,6 +34,28 @@
   </div>
 
 <% } %>
+</div>
+
+ <h1 class="mt-3 font-size: 2.5rem text-warning-emphasis">Some additional options at Caffinity</h1>
+
+    <div class="cards d-flex flex-wrap gap-4 mt-4 ms-6 ">
+<% for (let drink of drinks) { %>
+  
+  <div class="card h-100 container-fluid border border-secondary" style="width: 20rem; height: 25rem">
+    <img src="<%= drink.image %>" class="card-img-top fixed-img border-bottom" alt="<%= drink.name %>">
+
+    <div class="card-body d-flex flex-column">
+      <h5 class="card-title"><%= drink.name %></h5>
+
+      <p class="card-text"><%= drink.description %></p>
+
+      <p class="fw-bold">₹ <%= drink.price %> &nbsp;⭐ <%= drink.avgRating %></p>
+
+      <input class="btn btn-primary btn-sm mt-auto" type="button" value="Add">
+    </div>
+  </div>
+
+<% } %> 
 
 
 </div>
