--- a/views/coffees/menu.ejs
+++ b/views/coffees/menu.ejs
@@ -36,9 +36,9 @@
 <% } %>
 </div>
 
- <h1 class="mt-3 font-size: 2.5rem text-warning-emphasis">Some additional options at Caffinity</h1>
+ <h1 class="mt-3 font-size: 2.5rem text-warning-emphasis">Some drinks options at Caffinity</h1>
 
-    <div class="cards d-flex flex-wrap gap-4 mt-4 ms-6 ">
+    <div class="cards d-flex flex-wrap gap-3 mt-4 ms-4 ">
 <% for (let drink of drinks) { %>
   
   <div class="card h-100 container-fluid border border-secondary" style="width: 20rem; height: 25rem">
