--- a/views/coffees/contact.ejs
+++ b/views/coffees/contact.ejs
@@ -123,7 +123,7 @@
 
     <!-- Right Form -->
     <div class="right-section">
-      <form action="/contact" class="needs-validation"   method="POST">
+      <form action="/contact"  method="POST" class="needs-validation" novalidate>
 
         <label>Your Name</label>
         <input type="text" id="name" name="name" placeholder="Enter your full name" required />
@@ -137,8 +137,8 @@
         <input type="tel" id="mobile" name="mobile" pattern="[0-9]{10}" placeholder="Enter your phone number" required />
          <div class="error-text" id="mobileError"></div>
 
-        <label name="issue">Issue Type</label>
-        <select required>
+        <label for="issue">Issue Type</label>
+        <select name="issue" required>
            <option value="" disabled selected>Select your issue</option>
           <option>Order Issue</option>
           <option>Payment Issue</option>
@@ -148,9 +148,8 @@
         </select>
 
         <label for="source">How did you know about us?</label>
-        <select required>
+        <select name="source" required>
           <option value="" disabled selected>Select your issue</option>
-          <option>Select</option>
           <option>Instagram</option>
           <option>Friends</option>
           <option>Google Search</option>
@@ -158,8 +157,8 @@
           <option>Other</option>
         </select>
 
-        <label name="msg">Your Message</label>
-        <textarea rows="6" id="msg" name="name" placeholder="Write your message..." required></textarea>
+        <label >Your Message</label>
+        <textarea rows="6" id="msg" name="message" placeholder="Write your message..." required></textarea>
          <div class="error-text" id="msgError"></div>
 
         <button type="submit">Send Message</button>
