--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -10,7 +10,7 @@
       <a class="ms-4" href="/menu">Menu</a>
       <a class="ms-2" href="/about">About</a>
       <a class="ms-2" href="/pages">Pages</a>
-      <a class="ms-2" href="/contact">Contact Us</a>
+      <a class="ms-2" href="/connect">Contact Us</a>
     </div>
 
     <div class="flex-grow-1"></div>
