styled and validated the query form

--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -9,7 +9,7 @@
       <a href="/home">Home</a>
       <a class="ms-4" href="/menu">Menu</a>
       <a class="ms-2" href="/about">About</a>
-      <a class="ms-2" href="/pages">Pages</a>
+      <!-- <a class="ms-2" href="/pages">Pages</a> -->
       <a class="ms-2" href="/connect">Contact Us</a>
     </div>
 
