--- a/views/coffees/menu.ejs
+++ b/views/coffees/menu.ejs
@@ -13,45 +13,58 @@
 
 </style>
 
-<h1 class="mt-3 font-size: 2.5rem text-warning-emphasis">Explore all the best coffees at Caffinity</h1>
+<h1 class="mt-3 font-size: 2.5rem text-warning-emphasis text-center">Featured coffees at Caffinity</h1>
 
-<div class="cards d-flex flex-wrap gap-4 mt-4 ms-6 ">
+<div class="cards d-flex flex-wrap gap-4 mt-4 ms-6">
 
  <% for (let coffee of coffees) { %>
 
-  <div class="card h-100 container-fluid border border-secondary" style="width: 20rem; height: 25rem">
-    <img src="<%= coffee.image %>" class="card-img-top fixed-img border-bottom" alt="<%= coffee.name %>">
+  <div class="card h-100 container-fluid border border-secondary rounded-top-4" style="width: 20rem; height: 30rem">
 
-    <div class="card-body d-flex flex-column">
+    <img src="<%= coffee.image %>" 
+         class="card-img-top fixed-img  rounded-top-4" 
+         alt="<%= coffee.name %>">
+
+    <div class="card-body bg-dark text-white d-flex flex-column">
+
       <h5 class="card-title"><%= coffee.name %></h5>
 
       <p class="card-text"><%= coffee.description %></p>
 
-      <p class="fw-bold">₹ <%= coffee.price %> &nbsp;⭐ <%= coffee.avgRating %></p>
+      <p class="fw-bold">
+        ₹ <%= coffee.price %> &nbsp; ⭐ <%= coffee.avgRating %>
+      </p>
 
-      <input class="btn btn-primary btn-sm mt-auto" type="button" value="Add">
+      <input class="btn btn-warning text-dark btn-sm mt-2 rounded-4" 
+             type="button" value="🛒 Add">
+
+     <input class="btn btn-dark text-warning btn-sm mt-2 rounded-4 view-btn  border-warning  rounded-top-4" type="button" value="👁 View Product">
+
     </div>
   </div>
 
-<% } %>
+ <% } %>
 </div>
 
- <h1 class="mt-3 font-size: 2.5rem text-warning-emphasis">Some drinks options at Caffinity</h1>
+
+ <h1 class="mt-3 font-size: 2.5rem text-warning-emphasis text-center">Some drinks options at Caffinity</h1>
 
     <div class="cards d-flex flex-wrap gap-3 mt-4 ms-4 ">
 <% for (let drink of drinks) { %>
   
-  <div class="card h-100 container-fluid border border-secondary" style="width: 20rem; height: 25rem">
-    <img src="<%= drink.image %>" class="card-img-top fixed-img border-bottom" alt="<%= drink.name %>">
+  <div class="card h-100 container-fluid border border-secondary" style="width: 20rem; height: 30rem">
+    <img src="<%= drink.image %>" class="card-img-top fixed-img " alt="<%= drink.name %>">
 
-    <div class="card-body d-flex flex-column">
+    <div class="card-body bg-dark text-white  d-flex flex-column">
       <h5 class="card-title"><%= drink.name %></h5>
 
       <p class="card-text"><%= drink.description %></p>
 
       <p class="fw-bold">₹ <%= drink.price %> &nbsp;⭐ <%= drink.avgRating %></p>
 
-      <input class="btn btn-primary btn-sm mt-auto" type="button" value="Add">
+
+<input class="btn btn-warning text-dark btn-sm mt-2 rounded-4" type="button" value="🛒 Add">
+<input class="btn btn-dark text-warning btn-sm mt-2 rounded-4 view-btn  border-warning  rounded-top-4" type="button" value="👁 View Product">
     </div>
   </div>
 
